# ai_sail

./: README.md
client/streamer/: CMakeLists.txt  REAME.md  package.xml
client/streamer/launch/: ai_deck.launch
client/streamer/script/: client.py  opencv_node.py  ros_node.py
crazyflie/: README.md  aideck.c  aideck_protocol.c  aideck_protocol.h
gap/streamer/: Makefile  REAME.md  camera.c  camera.h  common.h  config.h  frame_streamer_utils.c  frame_streamer_utils.h  himax_utils.c  himax_utils.h  io.c  io.h  led.c  led.h  logging.h  main.c  nina.c  nina.h  uart.c  uart.h  uart_protocol.c  uart_protocol.h
gap/streamer/tests/grabber/: Makefile  test_grab_lines.c
gap/streamer/tests/loop/: Makefile  test_loops.c
nina/streamer/: Makefile  REAME.md  load.sh  notes.md  sdkconfig
nina/streamer/main/: Kconfig.projbuild  streamer.c  wifi.h
protocol/: README.md  base.py  example_config.py  generate.py  stream_config.py
protocol/templates/: crazyflie.aideck_p.h.j2  crazyflie.aideck_protocol.c.j2  crazyflie.aideck_protocol.h.j2  gap._protocol.c.j2  gap.protocol.h.j2  macros.j2
