<?xml version="1.0"?>
<package>
  <name>ai_sail_stream_receiver</name>
  <version>0.0.1</version>
  <description>A minimal driver that republish to ROS image streamed via sockets or image pipes by the AI-deck</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/drone_arena</url> -->

  <author email="jerome@idsia.ch">Jerome Guzzi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
